[workspace]
resolver = "2"
members = [
    "ltengine",
    "llama-cpp-rs/examples/simple",
]

[workspace.dependencies]
# core llama-cpp-2 deps
thiserror = "1"
tracing = "0.1"
tracing-core = "0.1"
bindgen = "0.69.5"
cc = "1.2.19"
encoding_rs = "0.8.35"

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
