[package]
name = "ltengine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
clap = { version = "4.5.37", features = ["derive"] }
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"
