[package]
name = "ltengine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
clap = { version = "4.5.37", features = ["derive"] }
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
actix-web-static-files = "4.0"
static-files = "0.2.1"
hf-hub = { version = "0.3.2" }
anyhow = "1.0.97"
llama-cpp-2 = { path = "../llama-cpp-rs/llama-cpp-2", version = "0.1.69" }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[build-dependencies]
static-files = "0.2.1"
